# ResourceRationalAgents

./: .gitignore  ARCHITECTURE.md  README.md
ResourceRationalAgents/: AGENTS.md  pyproject.toml
ResourceRationalAgents/High/: AGENTS.md
ResourceRationalAgents/Low/: AGENTS.md
ResourceRationalAgents/Meta/: AGENTS.md
ResourceRationalAgents/project/: AGENTS.md
ResourceRationalAgents/project/calculator/: DECISION_LOG.md  README.md
ResourceRationalAgents/project/calculator/calculator/: __init__.py  __main__.py  composition.py  gui.py
ResourceRationalAgents/project/calculator/calculator/adapters/: __init__.py  cli.py  gui.py
ResourceRationalAgents/project/calculator/calculator/application/: __init__.py  calculate.py
ResourceRationalAgents/project/calculator/calculator/domain/: __init__.py  expression.py
ResourceRationalAgents/project/calculator/tests/: __init__.py  test_calculator.py  test_gui_presenter.py
ResourceRationalAgents/src/resource_rational_agents/: __init__.py  cli.py
ResourceRationalAgents/src/resource_rational_agents/planning/: __init__.py
ResourceRationalAgents/src/resource_rational_agents/planning/adapters/: __init__.py  in_memory_project.py
ResourceRationalAgents/src/resource_rational_agents/planning/application/: __init__.py  orchestrator.py  ports.py
ResourceRationalAgents/src/resource_rational_agents/planning/composition/: __init__.py  root.py
ResourceRationalAgents/tests/: __init__.py  test_domain_policies.py  test_orchestrator.py
ResourceRationalAgents/tools/: check_architecture.py
(+6 files in other folders)
