[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-rational-agents"
version = "0.1.0"
description = "A constraint-gated hierarchical metareasoning harness for software agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
resource-rational-agents = "resource_rational_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["resource_rational_agents"]
mypy_path = "src"

